# QuarkoniumTMD

./: CMakeLists.txt  README.md
inc/quarkoniumtmd/: constantsquarkonium.h  gammafquarkonium.h  matchingfunctionspdfquarkonium.h  sigmazero.h  tmdbuilderquarkonium.h
run/: CMakeLists.txt  tmd_test.cc
src/: gammafquarkonium.cc  matchingfunctionspdfquarkonium.cc  sigmazero.cc  tmdbuilderquarkonium.cc
