file(GLOB run_codes *.cc)
foreach(runsource ${run_codes})
  get_filename_component(filename ${runsource} NAME_WE)
  add_executable(${filename} ${filename}.cc)
  target_include_directories(${filename} PRIVATE ${CMAKE_SOURCE_DIR}/inc)
  if(TARGET QuarkoniumTMD)
    target_link_libraries(${filename} QuarkoniumTMD)
  else()
    target_link_libraries(${filename} apfelxx::apfelxx)
  endif()
endforeach()
